# Cartoon-videos-Genenator-AI-Agent

./: .env.example  .gitignore  README.md  hello.py  pyproject.toml  requirements.txt  test_api.py
agents/: memory_agent.py  sound_generator.py  story_generator.py  video_creator.py
storage/: stories.json
templates/: prompt_template.py
