[project]
name = "ai-video"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.5.2",
    "cache>=1.0.3",
    "decorator>=5.2.1",
    "diffusers>=0.32.2",
    "fastapi>=0.115.11",
    "imageio>=2.37.0",
    "imageio-ffmpeg>=0.6.0",
    "moviepy>=2.1.2",
    "numpy>=2.2.3",
    "openai>=1.66.3",
    "proglog>=0.1.10",
    "purge>=1.0",
    "pydantic>=2.10.6",
    "pydub>=0.25.1",
    "safetensors>=0.5.3",
    "sentence-transformers>=3.4.1",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
    "transformers>=4.49.0",
    "uvicorn>=0.34.0",
]
